objects/yk_loginflow__YubikeyLogEntry__c.object
<CustomObject>
    <fields>
        <fullName>yk_loginflow__otpEntered__c</fullName>
        <label>OTP entered</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__outcome__c</fullName>
        <label>Outcome</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__user__c</fullName>
        <label>User</label>
        <type>Email</type>
    </fields>
    <label>YubikeyLogEntry</label>
    <nameField>
        <displayFormat>YkLog-{0000000000}</displayFormat>
        <label>YubikeyLogEntry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YubikeyLogEntries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>